--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
 
-    background-image: url("./img/Desktop_1.png");
+    background-image: url("../public/Desktop_1.png");
     background-size: cover;
     background-repeat: repeat;
 }
@@ -60,7 +60,7 @@
     align-items: center;
 
     color: #efefef;
-    background-image: url("./img/Desktop_1.png");
+    background-image: url("../public/Desktop_1.png");
     background-size: cover;
     background-repeat: repeat;
 }
@@ -135,6 +135,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
 
     border-top: 2px solid #202040;
     border-bottom: 2px solid #202040;
