--- a/styles/gameCard.module.css
+++ b/styles/gameCard.module.css
@@ -5,6 +5,8 @@
     width: 100%;
     height: 30vh;
 
+    position: relative;
+
     display: flex;
     flex-direction: row;
     justify-content: stretch;
@@ -14,6 +16,31 @@
         linear-gradient(to right, rgb(0, 255, 195), darkorchid) border-box;
     border-radius: 5px;
     border: 2px solid transparent;
+}
+
+.card_delete{
+    height: 25px;
+    width: 25px;
+
+    position: absolute;
+
+    color: red;
+    font-weight: 900;
+
+    background: rgba(255, 0, 0, 0.2);
+
+    border-radius: 3px;
+    border: 1px solid red;
+
+    top: 5px;
+    right: 5px;
+
+    transition: 0.1s ease-in;
+}
+
+.card_delete:hover{
+    background: rgba(255, 0, 0, 0.4);
+    cursor: pointer;
 }
 
 .card__left {
@@ -41,7 +68,6 @@
     justify-content: space-between;
 
     border-left: 1px solid #202040;
-    border-right: 1px solid #202040;
 }
 
 .card__mid__content {
