--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -7,8 +7,9 @@
     display: flex;
     justify-content: center;
 
-    background-image: url("/Desktop_1.png");
+    background: linear-gradient(to right, rgba(20, 20, 40, 0.75), rgba(20, 20, 40, 0.75)), url("/bg_2.jpg");
     background-size: cover;
+    background-attachment: fixed;
     background-repeat: repeat;
 }
 
@@ -60,8 +61,9 @@
     align-items: center;
 
     color: #efefef;
-    background-image: url("/Desktop_1.png");
+    background: linear-gradient(to right, rgba(20, 20, 20, 0.85), rgba(20, 20, 20, 0.85)), url("/bg_2.jpg");
     background-size: cover;
+    background-attachment: fixed;
     background-repeat: repeat;
 }
 
