--- a/styles/gameCard.module.css
+++ b/styles/gameCard.module.css
@@ -18,7 +18,18 @@
     border: 2px solid transparent;
 }
 
-.card_delete{
+.platinum::after {
+    margin: 0px 10px;
+
+    background: rgba(10, 10, 20, 0.5);
+    
+    border: 1px solid #202040;
+    border-radius: 3px;
+
+    content: "💎";
+}
+
+.card_delete {
     height: 25px;
     width: 25px;
 
@@ -38,7 +49,7 @@
     transition: 0.1s ease-in;
 }
 
-.card_delete:hover{
+.card_delete:hover {
     background: rgba(255, 0, 0, 0.4);
     cursor: pointer;
 }
