--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
 
-    background: linear-gradient(to right, rgba(20, 20, 40, 0.75), rgba(20, 20, 40, 0.75)), url("/bg_2.jpg");
+    background: linear-gradient(to right, rgba(20, 20, 40, 0.85), rgba(20, 20, 40, 0.85)), url("/bg_2.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: repeat;
@@ -191,6 +191,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+}
+
+.checkbox_div {
+    flex-direction: row !important;
+    justify-content: flex-start !important;
+}
+
+.checkbox_div input {
+    width: 20px !important;
 }
 
 .form__right {
