Filters, and single game pages

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -51,6 +51,40 @@
     background-color: transparent;
 }
 
+.loader__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    align-self: center;
+}
+
+.loading__title {
+    color: #efefef;
+}
+
+.loader__circle {
+    width: 30px;
+    height: 30px;
+
+    border: 6px solid rgba(0, 0, 0, 0.2);
+    border-top: 6px solid #efefef;
+    border-radius: 50%;
+    
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .main__container {
     width: 100vw;
     height: auto;
