--- a/styles/gameCard.module.css
+++ b/styles/gameCard.module.css
@@ -1,3 +1,134 @@
+.re__container {
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.re__container div {
+    min-width: 30%;
+
+    display: flex;
+    align-items: center;
+}
+
+
+.re__container div:first-child {
+    flex-wrap: wrap;
+}
+
+.re__container div:last-child {
+    justify-content: flex-end;
+}
+
+.re__button {
+    height: 100%;
+
+    padding-bottom: 2px;
+    margin-right: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+
+    background-color: #121224;
+    color: #a5a5a5;
+    font-weight: 700;
+
+    border: 1px solid #a5a5a5;
+    border-radius: 2px;
+
+    transition: 0.25s ease-in-out;
+}
+
+.re__button:hover {
+    color: #efefef;
+
+    border: 1px solid #efefef;
+
+    cursor: pointer;
+}
+
+.re__button:last-child {
+    margin: 0;
+}
+
+.toggled {
+    color: #efefef;
+
+    border: 1px solid #efefef;
+}
+
+.list__card {
+    max-height: 3rem;
+
+    margin: 15px 0px !important;
+
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.list__card .card__title__list {
+    width: 40%;
+
+    margin: auto;
+
+    font-size: 80%;
+    text-align: center;
+
+    display: block !important;
+}
+
+.list__card .card__left {
+    width: 3rem;
+    height: 3rem;
+
+    margin: 0;
+}
+
+.list__card .card__mid {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.list__card .card__mid__content__divider {
+    display: none;
+}
+
+.list__card .card__ovr {
+    width: 100%;
+    height: 100%;
+}
+
+.list__card .card__ovr__content {
+    width: 2rem;
+    height: 2rem;
+}
+
+.list__card .card__ovr p {
+    font-size: 1rem;
+}
+
+.list__card .card_delete {
+    display: none;
+}
+
+.list__card .card__infos {
+    width: 80%;
+}
+
+.list__card .card__infos p {
+    color: #dfdfdf;
+}
+
+.list__card .card__info__name {
+    display: none;
+}
+
+.card__wrapper__link {
+    text-decoration: none;
+}
+
 .game__card {
     margin: 25px 0px;
     padding: 5px;
@@ -12,6 +143,7 @@
     justify-content: stretch;
     align-items: stretch;
 
+    color: #dfdfdf;
     background: linear-gradient(#121224, #121224) padding-box,
         linear-gradient(to right, rgb(0, 255, 195), darkorchid) border-box;
     border-radius: 5px;
@@ -22,7 +154,7 @@
     margin: 0px 10px;
 
     background: rgba(10, 10, 20, 0.5);
-    
+
     border: 1px solid #202040;
     border-radius: 3px;
 
@@ -52,6 +184,10 @@
 .card_delete:hover {
     background: rgba(255, 0, 0, 0.4);
     cursor: pointer;
+}
+
+.game__card .card__title__list {
+    display: none;
 }
 
 .card__left {
@@ -142,14 +278,22 @@
     align-items: center;
 }
 
-.card__ovr p {
-    padding: 25px;
+.card__ovr__content {
+    width: 4.5rem;
+    height: 4.5rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     background: #404080;
-    font-size: 1.5rem;
-    font-weight: 600;
 
     border-radius: 3px;
+}
+
+.card__ovr p {
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
 .card__infos {
@@ -185,32 +329,58 @@
         flex-direction: column;
     }
 
-    .game__card div {
+    .card__mid {
         width: 100%;
-
-        margin: 0;
         padding: 0;
+        margin: 0;
     }
 
     .card__left {
+        width: 100%;
         height: 30vh;
+
+        margin: 0;
+        padding: 0;
 
         border-radius: 0;
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
     }
 
+    .card__right {
+        width: 100%;
+
+        padding: 0;
+        margin: 0;
+    }
+
     .card__mid__content {
+        width: 100%;
+
+        padding: 0;
+        margin: 0;
+
         flex-direction: column;
     }
 
+    .card__mid__content__divider {
+        width: 100%;
+
+        margin: 0;
+        padding: 0;
+    }
+
     .card__title {
-        margin-top: 10px;
+        margin: 10px 5px 5px 5px;
         white-space: wrap;
 
 
         text-align: center;
         font-size: 6vw;
+    }
+
+    .card__ratings {
+        margin: 0;
     }
 
     .card__ratings div {
@@ -219,6 +389,17 @@
         width: auto;
 
         font-size: 3.75vw;
+    }
+
+    .card__ovr {
+        align-self: center;
+
+        padding: 20px;
+    }
+
+    .card__ovr__content {
+        width: 3.5rem;
+        height: 3.5rem;
     }
 
     .card__infos {
@@ -233,5 +414,99 @@
         margin: 2px 10px;
 
         width: auto;
+    }
+
+    .list__card {
+        max-height: 3rem;
+    
+        margin: 15px 0px !important;
+        padding-bottom: 0;
+    
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+
+        font-size: 3.5vw;
+    }
+
+    .list__card .card__title__list {
+        width: 40%;
+    
+        margin: 0px 5px;
+    
+        font-size: 80%;
+        text-align: center;
+    
+        display: block !important;
+    }
+    
+    .list__card .card__left {
+        width: 10%;
+        height: 3rem;
+    
+        margin: 0;
+    }
+    
+    .list__card .card__mid {
+        width: 50%;
+
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .list__card .card__mid__content {
+        width: auto;
+    }
+    
+    .list__card .card__mid__content__divider {
+        display: none;
+    }
+    
+    .list__card .card__ovr {
+        width: auto;
+        height: 100%;
+
+        padding: 0;
+        padding-right: 10px;
+    }
+    
+    .list__card .card__ovr__content {
+        width: 2rem;
+        height: 2rem;
+    }
+    
+    .list__card .card__ovr p {
+        font-size: 1rem;
+    }
+    
+    .list__card .card_delete {
+        display: none;
+    }
+    
+    .list__card .card__infos {
+        width: 80%;
+
+        font-size: 3.5vw;
+    }
+
+    .list__card .card__infos div {
+        display: none;
+    }
+
+    .list__card .card__infos .card__info__visible{
+        display: block;
+    }
+    
+    .list__card .card__infos p {
+        color: #dfdfdf;
+    }
+    
+    .list__card .card__info__name {
+        display: none;
+    }
+    
+    .card__wrapper__link {
+        text-decoration: none;
     }
 }
