--- a/styles/about/about.module.css
+++ b/styles/about/about.module.css
@@ -72,6 +72,8 @@
 .section__image__container{
     width: 50%;
 
+    padding: 50px;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -156,4 +158,48 @@
     padding: 10px;
 
     background: var(--theme-color-tone-2);
+}
+
+@media only screen and (max-width: 600px) {
+    .section__left {
+        flex-direction: column;
+
+        padding: 5vh 0;
+    }
+
+    .section__right {
+        flex-direction: column;
+
+        padding: 5vh 0;
+    }
+
+    .section__left .section__info__container {
+        width: 100%;
+    }
+
+    .section__right .section__info__container {
+        width: 100%;
+    }
+
+    .section__left .section__text {
+        align-items: center;
+    
+        padding: 10px 25px;
+    }
+
+    .section__right .section__text {
+        align-items: center;
+    
+        padding: 10px 25px;
+    }
+
+    .section__title {
+        width: 75%;
+    }
+
+    .section__image__container{
+        width: 80%;
+
+        padding: 0px 0px 50px 0px;
+    }
 }
