--- a/styles/gamepage/gamePage.module.css
+++ b/styles/gamepage/gamePage.module.css
@@ -9,6 +9,8 @@
 }
 
 .first__page {
+    position: relative;
+
     height: 90vh;
 
     border-bottom: 2px solid var(--theme-color-decor-2);
@@ -51,6 +53,8 @@
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     background-color: var(--theme-color-tone-1);
 
@@ -62,13 +66,15 @@
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
 }
 
-.stat__box div {
-    width: 100%;
+.stat__box__section {
+    width: 95%;
     height: 50%;
 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
+    border-bottom: 1px solid var(--theme-color-tone-2);
 }
 
 .stat {
@@ -88,7 +94,7 @@
 }
 
 .stat p:nth-child(2) {
-    color: var(--text-color-1);
+    color: var(--text-color-3);
 
     font-size: 10px;
     font-weight: 900;
@@ -108,4 +114,47 @@
 .reviews__page .dummy{
     width: 100%;
     height: 20vh;
+}
+
+@media only screen and (max-width: 600px) {
+    .center__container .title {
+        width: 100%;
+        
+        text-wrap: wrap;
+        font-size: 5vh;
+        text-align: center;
+
+        color: var(--text-color-1);
+    }
+
+    .stat__box{
+        width: 95%;
+        height: 25%;
+
+        transform: translate(-50%, 33%);
+    }
+
+    .stat__box__section {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .stat__box__section:first-child{
+        height: 66%;
+    }
+    
+    .stat__box__section:nth-child(2){
+        height: 34%;
+    }
+
+    .stat {
+        width: auto;
+        padding: 5px;
+    }
+
+    .stat p:nth-child(2){
+        font-size: 1.3vh;
+    }
 }
