--- a/styles/gamepage/reviewCard.module.css
+++ b/styles/gamepage/reviewCard.module.css
@@ -217,3 +217,42 @@
 
     color: var(--text-color-1);
 }
+
+@media only screen and (max-width: 600px) {
+    .wrapper {
+        height: auto;
+        width: 85%;
+    }
+    
+    .card {
+        height: auto;
+
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card__img {
+        width: 100%;
+        height: 20vh;
+    }
+
+    .card__mid {
+        width: 100%;
+    }
+
+    .card__desc {
+        max-height: 20vh;
+        padding-bottom: 15px;
+    }
+
+    .card__mid .card__ratings {
+        width: 100%;
+        border: none;
+        box-shadow: none;
+    }
+
+    .card__ovr {
+        padding: 50px 0px 25px 0px;
+        width: 100%;
+    }
+}
