--- a/styles/homepage/gamesComponent.module.css
+++ b/styles/homepage/gamesComponent.module.css
@@ -59,3 +59,17 @@
 .title__container p span{
     font-size: 3vh;
 }
+
+@media only screen and (max-width: 600px) {
+    .title__container .item__box {
+        font-size: 2.5vh;
+    }
+    
+    .title__container p{
+        font-size: 1.5vh;
+    }
+    
+    .title__container p span{
+        font-size: 2vh;
+    }
+}
