--- a/styles/homepage/user.module.css
+++ b/styles/homepage/user.module.css
@@ -1,6 +1,6 @@
 .card {
     width: 90%;
-    height: 10%;
+    height: 8vh;
 
     margin-bottom: 10px;
 
@@ -22,6 +22,8 @@
 .card__image {
     width: 20%;
     height: 100%;
+
+    border: 1px solid var(--theme-color-tone-2)
 }
 
 .card__mid {
@@ -48,4 +50,18 @@
 
     font-size: 1.25vh;
     font-weight: 600;
+}
+
+@media only screen and (max-width: 600px) {
+    .card {
+        justify-content: flex-start;
+    }
+
+    .card:first-child {
+        margin-bottom: 25px;
+    }
+
+    .card__image {
+        margin-right: 25px;
+    }
 }
