--- a/styles/profilepage/profileCard.module.css
+++ b/styles/profilepage/profileCard.module.css
@@ -122,3 +122,14 @@
 .info__box .dummy {
     height: 10px;
 }
+
+@media only screen and (max-width: 600px) {
+    .card {
+        max-width: 100%;
+        width: 100%;
+    }
+
+    .profile__wrapper {
+        width: 85%;
+    }
+}
