--- a/styles/profilepage/profilePage.module.css
+++ b/styles/profilepage/profilePage.module.css
@@ -64,6 +64,82 @@
     clip-path: polygon(0 0, 100% 0%, 92% 100%, 0% 100%);
 }
 
+.filterBar__container {
+    width: 75%;
+    height: 50px;
+
+    margin-top: 5vh;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    background: var(--theme-color-tone-2);
+    border-radius: var(--border-radius-small);
+
+    user-select: none;
+    -webkit-user-select: none; 
+    -moz-user-select: none;    
+    -ms-user-select: none;  
+}
+
+.filterBar__container .ordering {
+    width: auto;
+    height: 100%;
+
+    padding: 0% 2%;
+    margin-top: 1px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.filterBar__container p{
+    margin-right: 5px;
+
+    font-weight: 700;
+    font-size: small;
+    color: var(--text-color-3);
+}
+
+.filterBar__container a{
+    padding: 2px 10px;
+    padding-top: 3px;
+    margin-bottom: 1px;
+    margin-right: 3px;
+
+    font-size: x-small;
+    font-weight: 700;
+    font-style: italic;
+
+    color: var(--text-color-2);
+    background: var(--text-color-3);
+    border-radius: var(--border-radius-small);
+}
+
+.filterBar__container .ordering .toggled {
+    background: var(--theme-color-tone-1);
+    color: var(--theme-color-decor-1);
+}
+
+.filterBar__container .direction .toggled {
+    background: var(--theme-color-tone-1);
+    color: var(--theme-color-decor-1);
+}
+
+.filterBar__container .direction {
+    width: auto;
+    height: 100%;
+
+    padding: 0% 2%;
+    margin-top: 1px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 @media only screen and (max-width: 600px) {
     .main__container {
         height: auto;
