--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -102,9 +102,9 @@
     border-radius: var(--border-radius-small);
 
     user-select: none;
-    -webkit-user-select: none; 
-    -moz-user-select: none;    
-    -ms-user-select: none;  
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .filterBar__container .ordering {
@@ -112,14 +112,17 @@
     height: 100%;
 
     padding: 0% 2%;
-    margin-top: 1px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.filterBar__container p{
+.filterBar__container .ordering div {
+    margin-bottom: 1px;
+}
+
+.filterBar__container p {
     margin-right: 5px;
 
     font-weight: 700;
@@ -127,7 +130,7 @@
     color: var(--text-color-3);
 }
 
-.filterBar__container a{
+.filterBar__container a {
     padding: 2px 10px;
     padding-top: 3px;
     margin-bottom: 1px;
@@ -157,15 +160,18 @@
     height: 100%;
 
     padding: 0% 2%;
-    margin-top: 1px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+.filterBar__container .direction div {
+    margin-bottom: 3px;
+}
+
 .gameCard__container {
-    padding: 5vh 0px;
+    padding: 0px 0px 5vh 0px;
     width: 80vw;
     min-height: 100vh;
     height: auto;
@@ -430,5 +436,49 @@
 
     .optionBar__container {
         justify-content: center;
+    }
+
+    .filterBar__container {
+        width: 90%;
+        height: auto;
+
+        flex-direction: column;
+    }
+
+    .filterBar__container a {
+        margin: 2px;
+    }
+    
+    .filterBar__container p {
+        font-style: italic;
+        align-self: flex-start;
+    }
+
+    .filterBar__container .ordering {
+        width: 95%;
+
+        border-bottom: 1px solid var(--theme-alter);
+    }
+
+    .filterBar__container .ordering div {
+        padding: 10px 0px;
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+    }
+
+    .filterBar__container .direction {
+        width: 95%;
+
+        justify-content: space-between;
+        align-items: center;
+
+    }
+
+    .filterBar__container .direction div {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
     }
 }
