--- a/styles/gamepage/reviewCard.module.css
+++ b/styles/gamepage/reviewCard.module.css
@@ -1,13 +1,11 @@
 .wrapper{
+    position: relative;
+
     margin: 5vh 0;
 
     width: 75%;
     height: 25vh;
     min-height: 20vh;
-}
-
-.wrapper:hover .card__title{
-    opacity: 0.7;
 }
 
 .card__title{
@@ -36,9 +34,21 @@
     display: flex;
 
     cursor: default;
+
+    transition: 0.25s ease-in-out;
 }
 
-.car:last-child{
+.platinum {
+    border-color: #48abe0;
+    box-shadow: 0 0 20px 0px #48abe0;
+}
+
+.hoverable:hover{
+    border-color: var(--text-color-2);
+    cursor: pointer;
+}
+
+.card:last-child{
     margin-bottom: 25px;
 }
 
@@ -123,6 +133,9 @@
 .card__img {
     width: 25%;
     height: 100%;
+
+    border-top-left-radius: var(--border-radius-small);
+    border-bottom-left-radius: var(--border-radius-small);
 }
 
 .card__mid {
@@ -240,6 +253,9 @@
     .card__img {
         width: 100%;
         height: 20vh;
+
+        border-bottom-left-radius: 0;
+        border-top-right-radius: var(--border-radius-small);
     }
 
     .card__mid {
