--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -352,9 +352,24 @@
     text-transform: none;
 }
 
+.form__button__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form__button__container div {
+    margin: 0px 15px;
+}
+
+.form__button__container div:first-child a {
+    color: #efefef;
+    border-color: #efefef;
+}
+
 @media only screen and (max-width: 600px) {
-    .loginWrapper {
-        margin: 20px 0px 25px 0px;
+    .form__button__container div {
+        margin: 20px 15px 25px 15px;
     }
 
     .welcome__container {
@@ -448,7 +463,7 @@
     .filterBar__container a {
         margin: 2px;
     }
-    
+
     .filterBar__container p {
         font-style: italic;
         align-self: flex-start;
