--- a/styles/gamepage/gamePage.module.css
+++ b/styles/gamepage/gamePage.module.css
@@ -34,7 +34,7 @@
     margin: 0;
 
     color: var(--text-color-1);
-    font-size: 12vh;
+    font-size: 7rem;
     font-style: italic;
 
     mix-blend-mode: difference;
@@ -89,7 +89,7 @@
 .stat p {
     margin: 0;
 
-    font-size: 3vh;
+    font-size: 1.25rem;
     font-weight: 700;
 }
 
@@ -121,7 +121,7 @@
         width: 100%;
         
         text-wrap: wrap;
-        font-size: 5vh;
+        font-size: 1.75rem;
         text-align: center;
 
         color: var(--text-color-1);
@@ -155,6 +155,6 @@
     }
 
     .stat p:nth-child(2){
-        font-size: 1.3vh;
+        font-size: 0.5rem;
     }
 }
