--- a/styles/gamepage/reviewCard.module.css
+++ b/styles/gamepage/reviewCard.module.css
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
     position: relative;
 
     margin: 5vh 0;
@@ -8,7 +8,7 @@
     min-height: 20vh;
 }
 
-.card__title{
+.card__title {
     margin: 0;
 
     color: var(--text-color-1);
@@ -43,16 +43,16 @@
     box-shadow: 0 0 20px 0px #48abe0;
 }
 
-.hoverable:hover{
+.hoverable:hover {
     border-color: var(--text-color-2);
     cursor: pointer;
 }
 
-.card:last-child{
+.card:last-child {
     margin-bottom: 25px;
 }
 
-.card .delete{
+.card .delete {
     position: absolute;
     top: 5px;
     right: 5px;
@@ -84,7 +84,7 @@
     transition: 0.25s ease-in-out;
 }
 
-.card .delete a:first-child{
+.card .delete a:first-child {
     margin-right: 7px;
 
     color: var(--text-color-2);
@@ -92,7 +92,7 @@
     border: 1px solid var(--text-color-3);
 }
 
-.card .delete a:hover{
+.card .delete a:hover {
     opacity: 0.7;
 }
 
@@ -177,7 +177,7 @@
 
     background: var(--theme-color-tone-1);
 
-    width: 90%;
+    width: auto;
     height: 30%;
 
     display: flex;
@@ -194,6 +194,8 @@
 }
 
 .card__mid .card__ratings .rating {
+    margin: 15px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -204,7 +206,7 @@
     margin: 0;
 
     font-weight: 700;
-    font-size: 2.5vh;
+    font-size: 1.15rem;
 }
 
 .card__mid .card__ratings .rating p:nth-child(2) {
@@ -237,12 +239,19 @@
     color: var(--text-color-1);
 }
 
+@media only screen and (max-width: 1200px) {
+    .wrapper{
+        height: 12.5vh;
+        min-height: auto;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .wrapper {
         height: auto;
         width: 85%;
     }
-    
+
     .card {
         height: auto;
 
@@ -271,6 +280,10 @@
         width: 100%;
         border: none;
         box-shadow: none;
+    }
+
+    .card__mid .card__ratings .rating {
+        margin: 0;
     }
 
     .card__ovr {
