--- a/styles/homepage/gamesComponent.module.css
+++ b/styles/homepage/gamesComponent.module.css
@@ -47,29 +47,33 @@
     transition: 0.25s ease-in-out;
 }
 
-.title__container p{
+.title__container h1 {
+    font-size: 1.25rem;
+}
+
+.title__container p {
     margin: 0;
 
     color: var(--text-color-2);
     font-style: italic;
     font-weight: 700;
-    font-size: 2vh;
+    font-size: 0.85rem;
 }
 
-.title__container p span{
-    font-size: 3vh;
+.title__container p span {
+    font-size: 1rem;
 }
 
 @media only screen and (max-width: 600px) {
     .title__container .item__box {
-        font-size: 2.5vh;
+        font-size: 1.15rem;
     }
-    
-    .title__container p{
-        font-size: 1.5vh;
+
+    .title__container p {
+        font-size: 0.85rem;
     }
-    
-    .title__container p span{
-        font-size: 2vh;
+
+    .title__container p span {
+        font-size: 0.75rem;
     }
 }
