--- a/styles/homepage/user.module.css
+++ b/styles/homepage/user.module.css
@@ -40,7 +40,7 @@
 
     color: var(--text-color-1);
 
-    font-size: 2vh;
+    font-size: 0.75rem;
 }
 
 .card__user {
@@ -48,8 +48,15 @@
 
     color: var(--text-color-2);
 
-    font-size: 1.25vh;
+    font-size: 0.5rem;
     font-weight: 600;
+}
+
+@media only screen and (max-width: 1200px) {
+    .card__image {
+        width: 33%;
+        margin-right: 15px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -62,6 +69,7 @@
     }
 
     .card__image {
+        width: 20%;
         margin-right: 25px;
     }
 }
