--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
     --theme-alter: #181836;
     --theme-alter-2: #070715;
     --text-color-1: #efefef;
-    --text-color-2: #404080;
+    --text-color-2: #6060A0;
     --text-color-3: #c5c5d5;
     --theme-color-decor-1: #00FFC3;
     --theme-color-decor-2: darkorchid;
