Add modal for creating news posts and UI improvements
Introduced a reusable Modal component and its styles. Enabled admin users to create new news posts via a modal form on the homepage. Improved NewsFeed and Title components to support children and better layout. Updated post and title styles for enhanced UI and horizontal scrolling in news feed.

--- a/styles/homepage/index.module.css
+++ b/styles/homepage/index.module.css
@@ -165,6 +165,22 @@
     justify-content: flex-start;
 }
 
+.add__news{
+    padding: 2px 9px;
+
+    font-size: 28px;
+    color: var(--text-color-1);
+    background-color: var(--theme-color-tone-1);
+
+    border-radius: var(--border-radius-small);
+    transition: 0.25s ease-in-out;
+}
+
+.add__news:hover{
+    cursor: pointer;
+    background: var(--theme-color-tone-2);
+}
+
 @media only screen and (max-width: 1200px) {
     
 }
