--- a/styles/posts/post.module.css
+++ b/styles/posts/post.module.css
@@ -1,16 +1,34 @@
+.posts__container {
+    padding: 25px 5vw;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    overflow-x: auto;
+}
+
+.posts__container::-webkit-scrollbar{
+    height: 2px;
+}
+
 .post__card {
-    width: 30vw;
+    width: 35vw;
     height: 30vh;
+
+    margin: 0px 15px;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    border: 2px solid var(--theme-color-decor-1);
+    border: 1px solid var(--text-color-2);
     border-radius: var(--border-radius-large);
 
     overflow: hidden;
+
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
 }
 
 .post__card h3 {
