--- a/styles/titleComponent.module.css
+++ b/styles/titleComponent.module.css
@@ -13,10 +13,10 @@
 
 .title__container {
     width: 90%;
-    height: 10vh;
+    height: 5vh;
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
