--- a/styles/homepage/review.module.css
+++ b/styles/homepage/review.module.css
@@ -18,8 +18,26 @@
 }
 
 .card__image {
-    width: 20%;
+    width: 15%;
     height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card__image h1{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    color: var(--text-color-2);
+    opacity: 0.5;
+}
+
+.card__image h1 svg{
+    transform: rotate(-45deg);
 }
 
 .card__mid {
